--- a/src/pages/Tab3.css
+++ b/src/pages/Tab3.css
@@ -1,7 +1,6 @@
 .contenido
 {
-   width: 2px;
-   min-height:20em;
-   float:left;
-   overflow:hidden;
+   width: 100%;
+   height: 102%;
+   background-image: radial-gradient( circle 760px at 13% 16.8%,  rgba(255,214,223,1) 0%, rgba(248,131,174,1) 50.6%, rgba(252,36,135,1) 93.4% );
 }
