--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -2,14 +2,81 @@
 ion-toolbar {
     --background: transparent;
     --ion-color-base: transparent !important;
+    background-color: rgb(91, 156, 216); 
+    
 }
 
-.img
+ion-page 
 {
+    background-color: rgb(91, 156, 216);  
+}
+
+.background
+{
+    
     text-align: center;
     position: absolute;
     left: 0%;
     right: 0%;
     top: 0%;
+    transform: translateY(0%);
+    
+}
+
+.fondo
+{
+    background-color: rgb(91, 156, 216);  
+}
+
+
+.logo
+{
+    left: 0%;
+    right: 50%;
+    top: 0%;
+    transform: translateY(30%);
+
+}
+.texto
+{
+    transform: translateY(100%);
+}
+strong
+{
+    text-transform:capitalize;
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+p
+{
+    text-transform:capitalize;
+    font-size: 10px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+a
+{
+    font-style: italic;
+    text-transform:capitalize;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.image
+{
+    
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    right: 0%;
+    top: 0%;
+    transform: translateY(800%);
+    width: 30px;
+}
+.contenido
+{
+
+    text-align: center;
+    text-size-adjust: 25px;
     transform: translateY(0%);
 }
